# mtf

./: CHANGELOG.md  Cargo.toml  README.md  input-output.diff  input.md  output.md  table.md
src/: lib.rs  main.rs
t/: README.md
