[package]
name = "mtf"
version = "0.3.4"
edition = "2024"
description = "Markdown Table Formatter"
license = "MIT"
repository = "https://github.com/qtfkwk/mtf"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
gstring = "0.13.1"
pulldown-cmark = "0.13.0"
