[package]
name = "mtf"
version = "0.3.6"
edition = "2024"
description = "Markdown Table Formatter"
license = "MIT"
repository = "https://github.com/qtfkwk/mtf"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
gstring = "0.13.3"
pulldown-cmark = "0.13.1"
